kubernetes/api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  labels:
    app: api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api-app
        image: shariquetech1987/devops-qrcode-api:latest
        ports:
        - containerPort: 8000
