kubernetes/front-end-dep.yaml
# Deployment file for the front-end
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-app
  labels:
    app: ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
      - name: ui-app
        image: shariquetech1987/devops-qrcode-front-end:latest
        ports:
        - containerPort: 3000
