kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app
spec:
  ports:
  - port: 8000
    targetPort: api-app-port
    protocol: TCP
  selector:
    app: api-app
  type: ClusterIP
