kubernetes/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  ports:
  - port: 80
    targetPort: frontend-app-port
    protocol: TCP
  selector:
    app: frontend-app
  type: LoadBalancer
