kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-app
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.sharique.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  ui-app
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  api-app
                port:
                  number: 8000
